--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^3.2.5"
+    "styled-components": "^3.2.5",
+    "superagent": "^3.8.3"
   }
 }
