--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-config": "^0.11.5",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
+    "react-router-native": "^4.2.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
