animation tests integrated

--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "expo": "^26.0.0",
+    "history": "^4.7.2",
     "react": "16.3.0-alpha.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
     "react-native-config": "^0.11.5",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-router-native": "^4.2.0",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
