--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "abortcontroller-polyfill": "^1.1.9",
     "chalk": "^2.4.1",
     "expo": "^26.0.0",
     "history": "^4.7.2",
@@ -34,6 +35,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.2.0",
     "styled-components": "^3.2.5",
     "superagent": "^3.8.3"
